--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -103,14 +103,14 @@
                         {% for booking in bookings %}
                         <tr class="bg-white">
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                                {{ booking.written_date }}
+                                {{ booking.date }}
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
                                 {{ booking.time }}
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-indigo-600 underline">
-                                <a href="{% url 'guest_detail' guest.id %}">
-                                    {{ booking.full_name }}
+                                <a href="{% url 'guest_detail' booking.guest_id.id %}">
+                                    {{ booking.guest_id }}
                                 </a>
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
@@ -120,20 +120,20 @@
                                 {{ booking.status }}
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                                {% for x in rating %}
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline text-yellow-400"
-                                    viewBox="0 0 20 20" fill="currentColor">
-                                    <path
-                                        d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
-                                </svg>
-                                {% endfor %}
-                                {% for x in rating %}
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline text-yellow-400"
-                                    fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
-                                </svg>
-                                {% endfor %}
+                                {% for x in booking.rating %}
+                              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline text-yellow-400"
+                                  viewBox="0 0 20 20" fill="currentColor" stroke="currentColor">
+                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
+                                      d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
+                              </svg>
+                              {% endfor %}
+                              {% for x in booking.unrating %}
+                              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline text-yellow-400"
+                                  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
+                                      d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
+                              </svg>
+                              {% endfor %}
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                                 <a href="#"
@@ -172,7 +172,7 @@
                                 Date
                             </th>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-                                {{ booking.written_date }}
+                                {{ booking.date }}
                             </td>
                         </tr>
                         <tr class="bg-white">
@@ -190,7 +190,7 @@
                                 Guest
                             </th>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-indigo-600 underline">
-                                <a href="{% url 'guest_detail' guest.id %}">
+                                <a href="{% url 'guest_detail' booking.guest_id.id %}">
                                     {{ booking.full_name }}
                                 </a>
                             </td>
