--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -109,8 +109,8 @@
                                 {{ booking.time }}
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-indigo-600 underline">
-                                <a href="{% url 'guest_detail' booking.guest_id.id %}">
-                                    {{ booking.guest_id }}
+                                <a href="{% url 'guest_detail' booking.guest.id %}">
+                                    {{ booking.guest }}
                                 </a>
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
@@ -190,7 +190,7 @@
                                 Guest
                             </th>
                             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-indigo-600 underline">
-                                <a href="{% url 'guest_detail' booking.guest_id.id %}">
+                                <a href="{% url 'guest_detail' booking.guest.id %}">
                                     {{ booking.full_name }}
                                 </a>
                             </td>
