FEAT: Added edit_booking functionality

--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -136,7 +136,7 @@
                               {% endfor %}
                             </td>
                             <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                                <a href="#"
+                                <a href="{% url 'edit_booking' booking.id %}"
                                     class="text-indigo-600 hover:text-indigo-900">
                                     Edit
                                 </a>
