FIX: Corrected toggleMenu js function by moving to base.html

--- a/theme/templates/bases/base.html
+++ b/theme/templates/bases/base.html
@@ -65,5 +65,16 @@
 
 		{% block postloadjs %}
 		{% endblock %}
+
+		<script>
+			function toggleMenu(menu) {
+			  menu = document.getElementById(menu);
+			  if (menu.classList.contains("hidden")) {
+				menu.classList.remove("hidden");
+			  } else {
+				menu.classList.add("hidden");
+			  }
+			}
+		  </script>
 	</body>
 </html>
