--- a/theme/templates/allauth/account/signup.html
+++ b/theme/templates/allauth/account/signup.html
@@ -33,8 +33,9 @@
 
 <div class="bg-gray-100 pb-12">
   <div class="w-1/3 mx-auto">
-    <p class="pt-6">{% blocktrans %}Already have an account? Then please <a class="underline text-blue-500" href="{{ login_url }}">sign
-      in</a>.{% endblocktrans %}</p>
+    <p class="pt-6">{% blocktrans %}Already have an account? Then please <a class="underline text-blue-500"
+        href="{{ login_url }}">sign
+        in</a>.{% endblocktrans %}</p>
     <form id="signup_form" method="post" action="{% url 'account_signup' %}">
       {% csrf_token %}
       <div class="space-y-8 divide-y divide-gray-200">
@@ -60,5 +61,7 @@
         </div>
       </div>
     </form>
+  </div>
+</div>
 
-  {% endblock %}
+{% endblock %}
