STYLE: Updated signin url on base-website

--- a/theme/templates/bases/base-website.html
+++ b/theme/templates/bases/base-website.html
@@ -131,8 +131,8 @@
             </a>
           </nav>
           <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
-            <a href="#" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
-              Sign in
+            <a href="{{ login_url }}" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
+              Login
             </a>
             <a href="{% url 'pricing' %}" class="ml-8 whitespace-nowrap inline-flex items-center justify-center bg-gradient-to-r from-blue-500 to-blue-600 bg-origin-border px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white hover:from-purple-700 hover:to-blue-700">
               Sign up
@@ -237,8 +237,8 @@
                 </a>
                 <p class="mt-6 text-center text-base font-medium text-gray-500">
                   Existing customer?
-                  <a href="#" class="text-gray-900">
-                    Sign in
+                  <a href="{{ login_url }}" class="text-gray-900">
+                    Login
                   </a>
                 </p>
               </div>
