--- a/website/templates/website/pricing.html
+++ b/website/templates/website/pricing.html
@@ -38,7 +38,7 @@
         </h1>
         <p class="mt-5 text-xl text-gray-500">Includes every feature we offer {{ secondary_string }}.</p>
       </div>
-      <a href="{% url 'signup' plan monthly %}" class="mt-8 w-full bg-indigo-600 border border-transparent px-5 py-3 inline-flex items-center justify-center text-base font-medium rounded-md text-white hover:bg-indigo-700 sm:mt-10 sm:w-auto xl:mt-0">Get started today</a>
+      <a href="{% url 'account_signup' %}" class="mt-8 w-full bg-indigo-600 border border-transparent px-5 py-3 inline-flex items-center justify-center text-base font-medium rounded-md text-white hover:bg-indigo-700 sm:mt-10 sm:w-auto xl:mt-0">Get started today</a>
     </div>
     <div class="border-t border-gray-200 pt-16 xl:grid xl:grid-cols-3 xl:gap-x-8">
       <div>
