FEAT: Updated profile to use allauth form and baseapp account url to profile

--- a/theme/templates/bases/base-app.html
+++ b/theme/templates/bases/base-app.html
@@ -75,7 +75,7 @@
             <hr>
           </div>
 
-          <a href="{% url 'account' 1 %}"
+          <a href="{% url 'profile' %}"
             class="{% if page == 'account' %}bg-indigo-800 text-white{% else %}text-indigo-100 hover:bg-indigo-600{% endif %} group flex items-center px-2 py-2 text-sm font-medium rounded-md">
             <!-- Heroicon name: outline/clipboard-check -->
             <svg class="mr-3 flex-shrink-0 h-6 w-6 text-indigo-300" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -175,7 +175,7 @@
               <hr>
             </div>
 
-            <a href="{% url 'account' 1 %}"
+            <a href="{% url 'profile' %}"
               class="{% if page == 'account' %}bg-indigo-800 text-white{% else %}text-indigo-100 hover:bg-indigo-600{% endif %} group flex items-center px-2 py-2 text-sm font-medium rounded-md">
               <!-- Heroicon name: outline/clipboard-check -->
               <svg class="mr-3 flex-shrink-0 h-6 w-6 text-indigo-300" xmlns="http://www.w3.org/2000/svg" fill="none"
