STYLE: Corrected color on dashboard template

--- a/reports/templates/reports/dashboard.html
+++ b/reports/templates/reports/dashboard.html
@@ -6,7 +6,7 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div>
     <dl class="my-5 grid grid-cols-1 gap-5 md:grid-cols-3">
-        <div class="px-4 py-5 bg-blue-600 shadow rounded-lg overflow-hidden sm:p-6">
+        <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
             <dt class="text-sm font-medium text-white truncate uppercase">
                 Total Guests
             </dt>
@@ -15,7 +15,7 @@
             </dd>
         </div>
 
-        <div class="px-4 py-5 bg-blue-600 shadow rounded-lg overflow-hidden sm:p-6">
+        <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
             <dt class="text-sm font-medium text-white truncate uppercase">
                 Total Bookings
             </dt>
@@ -24,7 +24,7 @@
             </dd>
         </div>
 
-        <div class="px-4 py-5 bg-blue-600 shadow rounded-lg overflow-hidden sm:p-6">
+        <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
             <dt class="text-sm font-medium text-white truncate uppercase">
                 Total Sales
             </dt>
@@ -37,7 +37,7 @@
 
 <div>
     <dl class="my-5 grid grid-cols-1 gap-5 md:grid-cols-3">
-        <div class="px-4 py-5 bg-blue-600 shadow rounded-lg overflow-hidden sm:p-6">
+        <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
             <dt class="text-sm font-medium text-white truncate uppercase">
                 % No-Shows
             </dt>
@@ -46,7 +46,7 @@
             </dd>
         </div>
 
-        <div class="px-4 py-5 bg-blue-600 shadow rounded-lg overflow-hidden sm:p-6">
+        <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
             <dt class="text-sm font-medium text-white truncate uppercase">
                 % Completed
             </dt>
@@ -55,7 +55,7 @@
             </dd>
         </div>
 
-        <div class="px-4 py-5 bg-blue-600 shadow rounded-lg overflow-hidden sm:p-6">
+        <div class="px-4 py-5 bg-indigo-700 shadow rounded-lg overflow-hidden sm:p-6">
             <dt class="text-sm font-medium text-white truncate uppercase ">
                 Avg. Booking Value
             </dt>
