--- a/theme/templates/bases/base-app.html
+++ b/theme/templates/bases/base-app.html
@@ -86,7 +86,7 @@
             Account
           </a>
 
-          <a href="{% url 'contact' %}"
+          <a href="{% url 'help' %}"
             class="{% if page == 'help' %}bg-indigo-800 text-white{% else %}text-indigo-100 hover:bg-indigo-600{% endif %} group flex items-center px-2 py-2 text-sm font-medium rounded-md">
             <!-- Heroicon name: outline/question-mark-circle -->
             <svg class="mr-3 flex-shrink-0 h-6 w-6 text-indigo-300" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -186,7 +186,7 @@
               Account
             </a>
 
-            <a href="{% url 'contact' %}"
+            <a href="{% url 'help' %}"
               class="{% if page == 'help' %}bg-indigo-800 text-white{% else %}text-indigo-100 hover:bg-indigo-600{% endif %} group flex items-center px-2 py-2 text-sm font-medium rounded-md">
               <!-- Heroicon name: outline/question-mark-circle -->
               <svg class="mr-3 flex-shrink-0 h-6 w-6 text-indigo-300" xmlns="http://www.w3.org/2000/svg" fill="none"
